[project]
name = "ollama-dl"
version = "0.1.0"
description = "Download models from an Ollama registry"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.27.2",
    "rich>=13.8.1",
]
[project.scripts]
ollama-dl = "ollama_dl:main"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.7",
]

[tool.ruff.lint]
select = [
    "ANN",
    "COM812",
    "E",
    "F",
    "I",
    "W",
]
ignore = [
    "D",
    "EM102",
    "PLR0913",
    "TRY003",
]
